app/assets/stylesheets/forms.css.scss
//= depend_on_asset "magnify-search.png"
//= depend_on_asset "magnify-search@2x.png"

@import "mixins";

fieldset {
  position: static;
  padding: 0;
  border: 0;
  margin: 15px 0;
  > .fieldset-fix {
    position: relative;
    width: 100%;
  }
}

input[type=radio],
input[type=checkbox] {
    & ~ label {
      color: #000;
      font-size: 14px;
    }
}
input[type=date],
input[type=datetime],
input[type=email],
input[type=search],
input[type=tel],
input[type=text],
input[type=number],
input[type=url],
input[type=password],
textarea {
  @include box-sizing(border-box);
  padding: .071em 12px;
  border: solid 1px #aaa;
  @include border-radius(3px);
  margin: 4px 0;
  font-family: inherit;
  font-size: 14px;

  &:focus {
    @include box-shadow(0 0 0 2px #bfd9ad);
    outline: none;
  }
  &.input--short {
    height: 35px;
    border-width: 1px;
    margin: 0;
  }
}
@media screen and (max-width: 600px) {
  input[type=date],
  input[type=datetime],
  input[type=email],
  input[type=search],
  input[type=tel],
  input[type=text],
  input[type=number],
  input[type=url],
  input[type=password],
  textarea {
    font-size: 16px;
  }
}
input {
  &[size="3"] {
    width: 4em;
  }
  &[size="4"] {
    width: 6em;
  }
  &[size="6"] {
    width: 8em;
  }
}
input[type=date],
input[type=datetime],
input[type=email],
input[type=search],
input[type=tel],
input[type=text],
input[type=number],
input[type=url],
input[type=password] {
  height: 36px;
}


input[type=file] + img {
  margin-top: 1em;
}

input[type=search] {
  height: 25px;
  padding-left: 20px;
  border: solid 1px #b0b0b0;
  @include border-radius(0);
  @include box-shadow(none);
  margin: 0;
  background: asset_url('magnify-search.png') 6px center no-repeat #fff;
  background: asset_url('magnify-search@2x.png') 6px center / 13px 13px no-repeat #fff;
  vertical-align: middle;
  -webkit-appearance: textfield;
  &::-webkit-search-cancel-button {
    display: none
  }

  ~ .btn,
  ~ button {
    vertical-align: middle
  }
}

@media screen and (max-width: 800px) {
  input[type=search] {
    width: 150px;
  }
}
@media screen and (max-width: 600px) {
  input[type=search] {
    width: auto;
  }
}
input[type=number] {
  -moz-appearance: textfield;
  &::-webkit-inner-spin-button {
    display: none;
  }
}

input,
select,
textarea {
  & ~ .hint {
    display: block;
  }
}

select {
  max-width: 100%;
}

label,
legend,
.faux-label {
  margin: 0 0 4px;
  font-size: 14px;
  font-weight: 600;
}

@media screen and (max-width: 800px) {
  label, legend, .faux-label {
    font-size: 16px;
  }
  select.mobile-block {
    display: block;
    width: 100%;
  }
}

legend {
  font: lighter 28px "Open Sans Condensed", OpenSans-Condensed, "Open Sans", OpenSans, sans-serif;
}

label {
  ~ .hint.pull-right,
  ~ .warning.pull-right {
    margin-top: 7px;
  }
}

select {
  font-size: 16px;
}

select,
.chosen-container {
  margin-top: 4px;

  + .hint,
  + .warning {
    display: inline-block;
    margin-top: .4em;
  }
}

textarea {
  display: block;
  width: 100%;
  padding-top: 12px;
  padding-bottom: 12px;
  resize: vertical;
}

.conditional {
  padding: 0 0 0 20px;

  & > input[type=radio],
  & > input[type=checkbox] {
    position: absolute;
    margin: 9px 0 0 -20px;
    &:disabled {
      ~ label {
        color: #aaa;
      }
    }
  }
  label {
    color: #000;
    font-size: 14px;
    font-weight: bold;
  }
  input + label {
    font-size: 14px;
    font-weight: normal;
  }
  > legend {
    margin-left: -20px;
    font-weight: normal;
    font-size: 18px;
    font-family: inherit;
  }
  > .haiku {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 20px;
  }
}

.field {
  margin: 10px 0;

  > .market-logo,
  > .market-photo {
    max-width: 330px;
    max-height: 120px;
  }

}

.payment-field {
  margin-left: 23px;
}
  .field--inline {
    display: inline-block;
    vertical-align: top;
    margin: 0;
    + .field--inline {
      margin: 0 0 0 1em;
    }
    @media screen and (max-width: 600px) {
      + .field--inline {
        margin: 10px 0 0 0;
      }
    }
  }
.field_with_errors {
  input,
  select,
  textarea {
    border-color: $alert_text;

    &:active,
    &:focus {
      @include box-shadow(0 0 2px $warning_text);
    }
  }
}
div.field_with_errors {
  display:inline;
}

.form-actions {
  margin: 30px 0;
  text-align: right;
}
  .action-helper {
    font-size: 15px;
  }
  .return-list {
    font-size: 12px;
    margin-top: -10px;
  }

@media screen and (max-width: 600px) {
  .taxonomy-select {
    width: 100%;
  }

  .action-helper {
    text-align: center;
    button,
    input[type=submit],
    .btn {
      display: block;
      margin-top: 15px;
    }
    input[type=submit] {
      width: 100%;
      
    }
  }
  .return-list {
    text-align: center;
    font-size: 14px;
    margin-top: 15px;
  }
}

form.form-actions {
  margin: 0 0 30px;
}

.form-footer {
  margin-top: 2em;
  color: #000;
}

.hint,
.warning {
  font-size: 12px;
}
  label {
    margin-right: 10px;
  }
.warning {
  color: #a16161;
  font-style: italic;
}

.negation:checked ~ .delivery-schedules {
  color: #aaa;

  .heading-conditionals {
    color: #aaa;
  }
}

.organization-info {
  margin-top: 0;
}

.primary-delivery-info {
  margin-bottom: 40px;
}

.invite-form {
  width: 300px;
  margin: 0 auto;

  h1 {
    text-align: center;
  }

  .submit-button {
    float: right;
  }
}
.receipt-price {
  font-size: 24px;
}

.newsletter-field {
  margin-top: 20px;
}
.newsletter-image-container {
  @include border-radius(5px);
  padding: 10px;
  margin-top: 5px;
  background: #eee;
  text-align: center;

  .newsletter-image-chooser {
    float: left;
  }
  .newsletter-remove {
    float: right;
    label {
      margin-right: 0;
      font-size: 12px;
      font-weight: 400;
    }
  }
}
.product-filters,
.invoice_search,
.payment_search,
.order_search {
  padding: 0 0 1em;

  input,
  .preserve-alignment {
    vertical-align: middle;
  }
  .preserve-alignment {
    display: inline-block;
    > select {
      display: block;
      text-align: left;
    }
  }
}
.wys-toolbar {
  margin-top: 5px;
}
@media screen and (max-width: 600px) {
  .wys-toolbar {
    display: none;
  }
}
.wys-headline {
  margin-bottom: 4px;
}

.promotion-field .wys-tools {
  width: 458px;
}
.wys-tools {
  @include border-radius(5px 5px 0 0);
  width: 650px;
  height: 30px;
  margin-bottom: -5px;
  padding: 0;
  background: #eee;
  border: 1px solid #AAA;
  a {
    color: #666;
    &:hover{
      text-decoration: none;
    }
  }
  .wys-text-format, .wys-text-lists, .wys-text-colors, .wys-links {
    display: inline-block;
    float: left;
    padding: 4px 10px 0 10px;
  }
  .wys-tools-icon {
    padding: 0 5px;

    span {
      font-size: 12px;
    }
  }
  .text-bold {
    font-weight: 700;
  }
  .text-italic {
    font-style: italic;
  }
  .text-underline {
    text-decoration: underline;
  }
  .text-red {
    font-weight: 700;
    color: #9A0500;
  }
  .text-green {
    font-weight: 700;
    color: green;
  }
  .text-blue {
    font-weight: 700;
    color: #10509A;
  }

  .wys-divider {
    width: 2px;
    height: 30px;
    float: left;
    background: #ddd;
  }
}
.wys-create-link {
  width: 250px;
  float: right;
  margin-top: -22px;

  a {
    cursor: pointer;
  }
  label {
    margin-right: 3px;
  }
  .cancel-link {
    color: #9A0500;
    font-size: 12px;
    padding-left: 20px;
  }
}
@media screen and (max-width: 600px) {
  .wys-tools {
    display: none;
  }
}
.newsletter-body {
  @include border-radius(0 0 5px 5px);
}

@media screen and (max-width: 600px) {
  .newsletter {
    .btn--send, .btn--newsletter{
      width: 100%;
      margin-bottom: 20px;
    }
  }
  .delete-check-mobile {
    display: none;
  }
}
.invite-email-field {
  width: 100%;
}

